--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -122,7 +122,6 @@
   }
 } */
 
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -206,6 +205,10 @@
   body {
     @apply bg-background text-foreground;
   }
+  .theme {
+    --animate-marquee: marquee var(--duration) infinite linear;
+    --animate-marquee-vertical: marquee-vertical var(--duration) linear infinite;
+  }
 }
 
 @font-face {
@@ -227,4 +230,49 @@
   src: url("/fonts/ArchitectsDaughter-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
+}
+
+@theme inline {
+  @keyframes marquee {
+  from {
+    transform: translateX(0);
+    }
+  to {
+    transform: translateX(calc(-100% - var(--gap)));
+    }
+  }
+  @keyframes marquee-vertical {
+  from {
+    transform: translateY(0);
+    }
+  to {
+    transform: translateY(calc(-100% - var(--gap)));
+    }
+  }
+}
+
+@keyframes marquee {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes marquee-vertical {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee var(--duration, 40s) linear infinite;
+}
+
+.animate-marquee-vertical {
+  animation: marquee-vertical var(--duration, 40s) linear infinite;
 }
